# manuscript-reference-lister

./: .env  .env.example  .gitignore  README.md  citation_parser.py  config_loader.py  data_loader.py  doi_fetcher.py  environment.yml  pyproject.toml  requests_wrapper.py  requirements.txt  style_fetcher.py  test_citation_parser.py  test_data_loader.py  test_doi_fetcher.py  test_integ_doi_api_health.py  test_integ_styles_api_health.py  test_requests_wrapper.py  test_style_fetcher.py  test_text_loader.py  test_work_fetcher.py  text_loader.py  work.py
src/manuscript-reference-lister/: journal_fetcher.py
src/manuscript_reference_lister/: __init__.py  __main__.py  bibliography_manager.py  citation_metadata.py  citation_parser.py  cli.py  config_loader.py  core.py  doi_repository.py  journal_parser.py  journal_repository.py  logging_config.py  requests_wrapper.py  style_fetcher.py  style_repository.py  work_fetcher.py  work_metadata.py  work_repository.py
tests/: conftest.py
tests/e2e/: test_cli_pipeline.py
tests/integration/: test_integ_doi_api_health.py  test_integ_journal_api_health.py  test_integ_journals_api_health.py  test_integ_style_api_health.py  test_integ_styles_api_health.py  test_integ_work_api_health.py  test_integ_works_api_health.py
tests/unit/: test_bibliography_manager.py  test_citation_parser.py  test_cli.py  test_data_loader.py  test_doi_fetcher.py  test_doi_repository.py  test_journal_fetcher.py  test_journal_parser.py  test_journal_repository.py  test_logging_config.py  test_requests_wrapper.py  test_style_fetcher.py  test_style_repository.py  (+2 more)
(+45 files in other folders)
